Show a helpful message when accessing an unpublished thesis proposal, instead of the error page.